--- a/gobject/Makefile.in
+++ b/gobject/Makefile.in
@@ -16,6 +16,35 @@
 
 # GLIB - Library of useful C routines
 
+# Author: Fan, Chun-wei
+# Common Autotools file used to generate Visual Studio 2008+
+# Projects from their templates
+
+# This autotools file, from GLib, can be used in other projects
+# that have Visual Studio build support, and is copied into
+# $(srcroot)/build/.
+
+# * Input variables:
+#
+#   MSVCPROJS - List of Projects that should be generated
+#
+# * Simple tutorial
+#
+# Add this to Makefile.am where your library/program is built:
+#   include $(top_srcdir)/build/Makefile.msvcproj
+#   MSVCPROJS = YourProject (can be multiple projects in a single srcdir)
+#   YourProject_FILES = $(libyourlib_1_0_SOURCES)
+#   YourProject_EXCLUDES = ... # list of sources to exclude, separated by '|', wildcards allowed; use random unsed value if none
+#   YourProject_HEADERS_DIR = $(libyourlibincludedir)
+#   YourProject_HEADERS_INST = $(libyourlib_1_0_HEADERS)
+#   YourProject_HEADERS_EXCLUDES = ... # <list of headers to exclude from installation, separated by '|', wildcards allowed; use random unsed value if none>
+#
+#   dist-hook: \ # (or add to it if it is already there, note the vs9 items will also call the vs10 items in the process)
+#   	$(top_builddir)/build/win32/vs9/YourProject.vcproj	\
+#   	$(top_builddir)/build/win32/vs9/YourProject.headers
+
+# Private functions
+
 
 
 
@@ -84,12 +113,13 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-DIST_COMMON = $(top_srcdir)/glib.mk $(srcdir)/Makefile.in \
-	$(srcdir)/Makefile.am $(srcdir)/gobject.stp.in \
-	$(srcdir)/glib-mkenums.in $(srcdir)/makefile.msc.in \
-	$(srcdir)/gobject.rc.in $(dist_gdb_SCRIPTS) \
-	$(top_srcdir)/depcomp $(libgobjectinclude_HEADERS) \
-	$(top_srcdir)/test-driver ChangeLog
+DIST_COMMON = $(top_srcdir)/glib.mk \
+	$(top_srcdir)/build/Makefile.msvcproj $(srcdir)/Makefile.in \
+	$(srcdir)/Makefile.am $(srcdir)/glib-mkenums.in \
+	$(srcdir)/makefile.msc.in $(srcdir)/gobject.rc.in \
+	$(dist_gdb_SCRIPTS) $(top_srcdir)/depcomp \
+	$(libgobjectinclude_HEADERS) $(top_srcdir)/test-driver \
+	ChangeLog
 installed_test_PROGRAMS = $(am__EXEEXT_1)
 noinst_PROGRAMS = $(am__EXEEXT_3)
 check_PROGRAMS = $(am__EXEEXT_2)
@@ -127,6 +157,7 @@ TESTS = $(am__EXEEXT_1)
 @ENABLE_DTRACE_TRUE@am__append_17 = gobject_probes.h
 @ENABLE_DTRACE_TRUE@am__append_18 = gobject_probes.lo
 @ENABLE_SYSTEMTAP_TRUE@am__append_19 = $(tapset_in_files)
+@ENABLE_SYSTEMTAP_TRUE@am__append_20 = $(tapset_in_files:.stp.in=.stp)
 bin_PROGRAMS = gobject-query$(EXEEXT) glib-genmarshal$(EXEEXT)
 subdir = gobject
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -147,7 +178,7 @@ am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(install_sh) -d
 CONFIG_HEADER = $(top_builddir)/config.h
-CONFIG_CLEAN_FILES = gobject.stp glib-mkenums makefile.msc gobject.rc
+CONFIG_CLEAN_FILES = glib-mkenums makefile.msc gobject.rc
 CONFIG_CLEAN_VPATH_FILES =
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
 am__vpath_adj = case $$p in \
@@ -504,7 +535,6 @@ am__relativize = \
     dir1=`echo "$$dir1" | sed -e "$$sed_rest"`; \
   done; \
   reldir="$$dir2"
-ABS_GLIB_RUNTIME_LIBDIR = @ABS_GLIB_RUNTIME_LIBDIR@
 ABS_TAPSET_DIR = @ABS_TAPSET_DIR@
 ACLOCAL = @ACLOCAL@
 ALLOCA = @ALLOCA@
@@ -516,11 +546,13 @@ AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
+CARBON_LIBS = @CARBON_LIBS@
 CATALOGS = @CATALOGS@
 CATOBJEXT = @CATOBJEXT@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
+COCOA_LIBS = @COCOA_LIBS@
 CONFIG_STATUS_DEPENDENCIES = @CONFIG_STATUS_DEPENDENCIES@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
@@ -551,11 +583,8 @@ GIO = @GIO@
 GIO_MODULE_DIR = @GIO_MODULE_DIR@
 GLIBC21 = @GLIBC21@
 GLIB_BINARY_AGE = @GLIB_BINARY_AGE@
-GLIB_COMPILE_RESOURCES = @GLIB_COMPILE_RESOURCES@
-GLIB_COMPILE_SCHEMAS = @GLIB_COMPILE_SCHEMAS@
 GLIB_DEBUG_FLAGS = @GLIB_DEBUG_FLAGS@
 GLIB_EXTRA_CFLAGS = @GLIB_EXTRA_CFLAGS@
-GLIB_GENMARSHAL = @GLIB_GENMARSHAL@
 GLIB_HIDDEN_VISIBILITY_CFLAGS = @GLIB_HIDDEN_VISIBILITY_CFLAGS@
 GLIB_INTERFACE_AGE = @GLIB_INTERFACE_AGE@
 GLIB_LINK_FLAGS = @GLIB_LINK_FLAGS@
@@ -757,7 +786,8 @@ NULL =
 BUILT_SOURCES = $(am__append_16)
 BUILT_EXTRA_DIST = makefile.msc gobject.rc
 CLEANFILES = *.log *.trs $(am__append_14) $(am__append_17) \
-	gobject-public-headers.txt $(gen_sources) libgobject-gdb.py
+	$(am__append_20) gobject-public-headers.txt $(gen_sources) \
+	libgobject-gdb.py
 DISTCLEANFILES = 
 MAINTAINERCLEANFILES = 
 
@@ -882,6 +912,7 @@ libgobject_2_0_la_DEPENDENCIES = $(gobject_win32_res)
 #
 # GObject library header files for public installation
 gobject_public_h_sources = \
+	gobject-autocleanups.h	\
 	glib-types.h		\
 	gbinding.h		\
 	gboxed.h		\
@@ -971,15 +1002,38 @@ progs_LDADD = ./libgobject-2.0.la $(libglib)
 glib_genmarshal_LDADD = $(libglib)
 gobject_query_LDADD = $(progs_LDADD)
 
+# ------ MSVC Project File Generation ------
+MSVCPROJS = gobject
+gobject_FILES = $(libgobject_2_0_la_SOURCES)
+gobject_EXCLUDES = dummy
+gobject_HEADERS_DIR = $(libgobjectincludedir)
+gobject_HEADERS_INST = $(gobject_public_h_sources)
+gobject_HEADERS_EXCLUDES = dummy
+_proj_name = $(subst /,_,$(subst -,_,$(subst .,_,$(1))))
+_proj_path_raw := $(subst $(abs_top_srcdir),,$(abs_srcdir))
+_proj_path = $(subst /,\\,$(_proj_path_raw))
+_proj_subdir_int = $(subst \\\\,\\,\\$(_proj_path)\\)
+_proj_subdir = $(subst \\.\\,\\,$(_proj_subdir_int))
+_proj_files_raw = $(subst /,\\,$($(_proj_name)_FILES))
+_proj_files = $(subst $(srcdir)\\,,$(subst $(builddir)\\,,$(subst $(top_builddir)\\$(_proj_path)\\,\\,$(_proj_files_raw))))
+_proj_filters = $($(_proj_name)_EXCLUDES)
+_proj_headers_raw = $(subst /,\\,$($(_proj_name)_HEADERS_INST))
+_proj_headers = $(subst $(srcdir)\\,,$(subst $(builddir)\\,,$(subst $(top_builddir)\\$(_proj_path)\\,\\,$(_proj_headers_raw))))
+_proj_headers_excludes = $($(_proj_name)_HEADERS_EXCLUDES)
+_headers_dest_posix = $(subst $(includedir),,$($(_proj_name)_HEADERS_DIR))
+_headers_destdir = $(subst /,\\,$(_headers_dest_posix))
+
 # install gdb scripts
 gdbdir = $(datadir)/glib-2.0/gdb
 dist_gdb_SCRIPTS = gobject.py
+@HAVE_GLIB_RUNTIME_LIBDIR_FALSE@ABS_GLIB_RUNTIME_LIBDIR = $(libdir)
+@HAVE_GLIB_RUNTIME_LIBDIR_TRUE@ABS_GLIB_RUNTIME_LIBDIR = $(realpath $(libdir)/$(GLIB_RUNTIME_LIBDIR))
 all: $(BUILT_SOURCES)
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
 .SUFFIXES:
 .SUFFIXES: .c .lo .log .o .obj .test .test$(EXEEXT) .trs
-$(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am $(top_srcdir)/glib.mk $(am__configure_deps)
+$(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am $(top_srcdir)/glib.mk $(top_srcdir)/build/Makefile.msvcproj $(am__configure_deps)
 	@for dep in $?; do \
 	  case '$(am__configure_deps)' in \
 	    *$$dep*) \
@@ -1000,7 +1054,7 @@ Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	    echo ' cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@ $(am__depfiles_maybe)'; \
 	    cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@ $(am__depfiles_maybe);; \
 	esac;
-$(top_srcdir)/glib.mk:
+$(top_srcdir)/glib.mk $(top_srcdir)/build/Makefile.msvcproj:
 
 $(top_builddir)/config.status: $(top_srcdir)/configure $(CONFIG_STATUS_DEPENDENCIES)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
@@ -1010,8 +1064,6 @@ $(top_srcdir)/configure: @MAINTAINER_MODE_TRUE@ $(am__configure_deps)
 $(ACLOCAL_M4): @MAINTAINER_MODE_TRUE@ $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(am__aclocal_m4_deps):
-gobject.stp: $(top_builddir)/config.status $(srcdir)/gobject.stp.in
-	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 glib-mkenums: $(top_builddir)/config.status $(srcdir)/glib-mkenums.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 makefile.msc: $(top_builddir)/config.status $(srcdir)/makefile.msc.in
@@ -2098,67 +2150,12 @@ uninstall-am: uninstall-binPROGRAMS uninstall-binSCRIPTS \
 	uninstall-nobase_installed_testDATA uninstall-tapsetDATA
 
 
-### testing rules
-
-# test: run all tests in cwd and subdirs
-test: test-nonrecursive
-@OS_UNIX_TRUE@	@ for subdir in $(SUBDIRS) . ; do \
-@OS_UNIX_TRUE@	    test "$$subdir" = "." -o "$$subdir" = "po" || \
-@OS_UNIX_TRUE@	    ( cd $$subdir && $(MAKE) $(AM_MAKEFLAGS) $@ ) || exit $? ; \
-@OS_UNIX_TRUE@	  done
-
 # test-nonrecursive: run tests only in cwd
 @OS_UNIX_TRUE@test-nonrecursive: ${TEST_PROGS}
 @OS_UNIX_TRUE@	@test -z "${TEST_PROGS}" || G_TEST_SRCDIR="$(abs_srcdir)" G_TEST_BUILDDIR="$(abs_builddir)" G_DEBUG=gc-friendly MALLOC_CHECK_=2 MALLOC_PERTURB_=$$(($${RANDOM:-256} % 256)) ${GTESTER} --verbose ${TEST_PROGS}
 @OS_UNIX_FALSE@test-nonrecursive:
 
-# test-report: run tests in subdirs and generate report
-# perf-report: run tests in subdirs with -m perf and generate report
-# full-report: like test-report: with -m perf and -m slow
-test-report perf-report full-report:	${TEST_PROGS}
-	@test -z "${TEST_PROGS}" || { \
-	  case $@ in \
-	  test-report) test_options="-k";; \
-	  perf-report) test_options="-k -m=perf";; \
-	  full-report) test_options="-k -m=perf -m=slow";; \
-	  esac ; \
-	  if test -z "$$GTESTER_LOGDIR" ; then	\
-	    G_TEST_SRCDIR="$(abs_srcdir)" G_TEST_BUILDDIR="$(abs_builddir)" ${GTESTER} --verbose $$test_options -o test-report.xml ${TEST_PROGS} ; \
-	  elif test -n "${TEST_PROGS}" ; then \
-	    G_TEST_SRCDIR="$(abs_srcdir)" G_TEST_BUILDDIR="$(abs_builddir)" ${GTESTER} --verbose $$test_options -o `mktemp "$$GTESTER_LOGDIR/log-XXXXXX"` ${TEST_PROGS} ; \
-	  fi ; \
-	}
-	@ ignore_logdir=true ; \
-	  if test -z "$$GTESTER_LOGDIR" ; then \
-	    GTESTER_LOGDIR=`mktemp -d "\`pwd\`/.testlogs-XXXXXX"`; export GTESTER_LOGDIR ; \
-	    ignore_logdir=false ; \
-	  fi ; \
-	  if test -d "$(top_srcdir)/.git" ; then \
-	    REVISION=`git describe` ; \
-	  else \
-	    REVISION=$(VERSION) ; \
-	  fi ; \
-	  for subdir in $(SUBDIRS) . ; do \
-	    test "$$subdir" = "." -o "$$subdir" = "po" || \
-	    ( cd $$subdir && $(MAKE) $(AM_MAKEFLAGS) $@ ) || exit $? ; \
-	  done ; \
-	  $$ignore_logdir || { \
-	    echo '<?xml version="1.0"?>'              > $@.xml ; \
-	    echo '<report-collection>'               >> $@.xml ; \
-	    echo '<info>'                            >> $@.xml ; \
-	    echo '  <package>$(PACKAGE)</package>'   >> $@.xml ; \
-	    echo '  <version>$(VERSION)</version>'   >> $@.xml ; \
-	    echo "  <revision>$$REVISION</revision>" >> $@.xml ; \
-	    echo '</info>'                           >> $@.xml ; \
-	    for lf in `ls -L "$$GTESTER_LOGDIR"/.` ; do \
-	      sed '1,1s/^<?xml\b[^>?]*?>//' <"$$GTESTER_LOGDIR"/"$$lf" >> $@.xml ; \
-	    done ; \
-	    echo >> $@.xml ; \
-	    echo '</report-collection>' >> $@.xml ; \
-	    rm -rf "$$GTESTER_LOGDIR"/ ; \
-	    ${GTESTER_REPORT} --version 2>/dev/null 1>&2 ; test "$$?" != 0 || ${GTESTER_REPORT} $@.xml >$@.html ; \
-	  }
-.PHONY: test test-report perf-report full-report test-nonrecursive
+.PHONY: test-nonrecursive
 
 .PHONY: lcov genlcov lcov-clean
 # use recursive makes in order to ignore errors during check
@@ -2170,15 +2167,16 @@ lcov:
 # placing the objects files in the .libs/ directory separate from the *.c
 # we also have to delete tests/.libs/libmoduletestplugin_*.gcda
 genlcov:
-	rm -f $(top_builddir)/tests/.libs/libmoduletestplugin_*.gcda
-	$(LTP) --directory $(top_builddir) --capture --output-file glib-lcov.info --test-name GLIB_PERF --no-checksum --compat-libtool
-	LANG=C $(LTP_GENHTML) --prefix $(top_builddir) --output-directory glib-lcov --title "GLib Code Coverage" --legend --show-details glib-lcov.info
+	$(AM_V_GEN) rm -f $(top_builddir)/tests/.libs/libmoduletestplugin_*.gcda; \
+	  $(LTP) --quiet --directory $(top_builddir) --capture --output-file glib-lcov.info --test-name GLIB_PERF --no-checksum --compat-libtool --ignore-errors source; \
+	  $(LTP) --quiet --output-file glib-lcov.info --remove glib-lcov.info docs/reference/\* /tmp/\*  gio/tests/gdbus-object-manager-example/\* ; \
+	  LANG=C $(LTP_GENHTML) --quiet --prefix $(top_builddir) --output-directory glib-lcov --title "GLib Code Coverage" --legend --frames --show-details glib-lcov.info --ignore-errors source
 	@echo "file://$(abs_top_builddir)/glib-lcov/index.html"
 
 lcov-clean:
-	-$(LTP) --directory $(top_builddir) -z
-	-rm -rf glib-lcov.info glib-lcov
-	-find -name '*.gcda' -print | xargs rm
+	if test -n "$(LTP)"; then \
+	  $(LTP) --quiet --directory $(top_builddir) -z; \
+	fi
 
 # run tests in cwd as part of make check
 check-local: test-nonrecursive
@@ -2186,7 +2184,7 @@ check-local: test-nonrecursive
 @ENABLE_INSTALLED_TESTS_TRUE@%.test: %$(EXEEXT) Makefile
 @ENABLE_INSTALLED_TESTS_TRUE@	$(AM_V_GEN) (echo '[Test]' > $@.tmp; \
 @ENABLE_INSTALLED_TESTS_TRUE@	echo 'Type=session' >> $@.tmp; \
-@ENABLE_INSTALLED_TESTS_TRUE@	echo 'Exec=$(installed_testdir)/$<' >> $@.tmp; \
+@ENABLE_INSTALLED_TESTS_TRUE@	echo 'Exec=$(installed_testdir)/$(notdir $<)' >> $@.tmp; \
 @ENABLE_INSTALLED_TESTS_TRUE@	mv $@.tmp $@)
 
 install-ms-lib:
@@ -2201,6 +2199,13 @@ uninstall-ms-lib:
 
 @ENABLE_DTRACE_TRUE@gobject_probes.lo: gobject_probes.d
 @ENABLE_DTRACE_TRUE@	$(AM_V_GEN) env CC="$(DTCOMPILE)" CFLAGS="$(DTCFLAGS)" $(DTRACE) -G -s $< -o $@
+
+@ENABLE_SYSTEMTAP_TRUE@$(tapset_DATA): %.stp: %.stp.in Makefile
+@ENABLE_SYSTEMTAP_TRUE@	$(AM_V_GEN)$(SED) \
+@ENABLE_SYSTEMTAP_TRUE@		-e 's|[@]ABS_GLIB_RUNTIME_LIBDIR[@]|$(ABS_GLIB_RUNTIME_LIBDIR)|g' \
+@ENABLE_SYSTEMTAP_TRUE@		-e 's|[@]LT_CURRENT[@]|$(LT_CURRENT)|g' \
+@ENABLE_SYSTEMTAP_TRUE@		-e 's|[@]LT_REVISION[@]|$(LT_REVISION)|g' \
+@ENABLE_SYSTEMTAP_TRUE@		$< > $@
 
 # This is read by gobject-introspection/misc/ and gtk-doc
 gobject-public-headers.txt: Makefile
@@ -2226,44 +2231,75 @@ glib-genmarshal.o: gmarshal.strings
 gobject-win32-res.o: gobject.rc
 	$(AM_V_GEN) $(WINDRES) gobject.rc $@
 
-gobject-2.0.lib: libgobject-2.0.la gobject.def
-	lib -machine:@LIB_EXE_MACHINE_FLAG@ -name:libgobject-2.0-$(LT_CURRENT_MINUS_AGE).dll -def:$(builddir)/gobject.def -out:$@
+gobject.def: libgobject-2.0.la
+	$(AM_V_GEN) dumpbin.exe -exports .libs/libgobject-2.0-0.dll | awk 'BEGIN { print "EXPORTS" } / +[[:digit:]]+ +[[:xdigit:]]+ +[[:xdigit:]]+/{ print $$4 }' > gobject.def.tmp && mv gobject.def.tmp gobject.def
 
-dist-hook: $(BUILT_EXTRA_DIST) ../build/win32/vs9/gobject.vcproj ../build/win32/vs10/gobject.vcxproj ../build/win32/vs10/gobject.vcxproj.filters
+gobject-2.0.lib: libgobject-2.0.la gobject.def
+	$(AM_V_GEN) lib.exe -machine:@LIB_EXE_MACHINE_FLAG@ -name:libgobject-2.0-$(LT_CURRENT_MINUS_AGE).dll -def:$(builddir)/gobject.def -out:$@
+
+#
+# Creates Visual Studio 2008/2010 projects from items passed in from autotools files
+# $(1) - Base Name of the MSVC project files (outputs)
+#
+
+define msvcproj-builder
+
+$(top_builddir)/build/win32/vs10/$(1).vcxproj: $(top_builddir)/build/win32/vs9/$(1).vcproj
+$(top_builddir)/build/win32/vs10/$(1).vcxproj.filters: $(top_builddir)/build/win32/vs9/$(1).vcproj
+$(1).sourcefiles: $(top_builddir)/build/win32/vs9/$(1).vcproj
+$(1).vs10.sourcefiles: $(top_builddir)/build/win32/vs9/$(1).vcproj
+$(1).vs10.sourcefiles.filters: $(top_builddir)/build/win32/vs9/$(1).vcproj
+
+$(top_builddir)/build/win32/vs9/$(1).vcproj:
+	-$(RM) $(top_builddir)/build/win32/vs9/$(1).vcproj
+	-$(RM) $(top_builddir)/build/win32/vs10/$(1).vcxproj
+	-$(RM) $(top_builddir)/build/win32/vs10/$(1).vcxproj.filters
+
+	for F in $(_proj_files); do \
+		case $$$$F in \
+		$(_proj_filters)) \
+			;; \
+		*.c|*.cpp|*.cc|*.cxx) \
+			echo '   <File RelativePath="..\..\..'$(_proj_subdir)$$$$F'" />' >>$(1).sourcefiles && \
+			echo '   <ClCompile Include="..\..\..'$(_proj_subdir)$$$$F'" />' >>$(1).vs10.sourcefiles && \
+			echo '   <ClCompile Include="..\..\..'$(_proj_subdir)$$$$F'"><Filter>Source Files</Filter></ClCompile>' >>$(1).vs10.sourcefiles.filters \
+			;; \
+		esac;	\
+	done
+
+	$(CPP) -P - <$(top_srcdir)/build/win32/vs9/$(1).vcprojin >$(top_builddir)/build/win32/vs9/$(1).vcproj
+	$(CPP) -P - <$(top_srcdir)/build/win32/vs10/$(1).vcxprojin >$(top_builddir)/build/win32/vs10/$(1).vcxproj
+	$(CPP) -P - <$(top_srcdir)/build/win32/vs10/$(1).vcxproj.filtersin >$(top_builddir)/build/win32/vs10/$(1).vcxproj.filters
+	$(RM) $(1).sourcefiles
+	$(RM) $(1).vs10.sourcefiles
+	$(RM) $(1).vs10.sourcefiles.filters
+
+$(top_builddir)/build/win32/vs10/$(1).vs10.headers: $(top_builddir)/build/win32/vs9/$(1).headers
+
+$(top_builddir)/build/win32/vs9/$(1).headers:
+	-$(RM) $(top_builddir)/build/win32/vs9/$(1).headers
+	-$(RM) $(top_builddir)/build/win32/vs10/$(1).vs10.headers
+
+	for F in $(_proj_headers); do \
+		case $$$$F in \
+		$(_proj_headers_excludes)) \
+			;; \
+		*.h|*.hpp|*.hh|*.hxx) \
+			echo 'copy ..\..\..'$(_proj_subdir)$$$$F' $$$$(CopyDir)\include'$(_headers_destdir)'\'$$$$F'&#x0D;&#x0A;' >>$(top_builddir)/build/win32/vs9/$(1).headers && \
+			echo 'copy ..\..\..'$(_proj_subdir)$$$$F' $$$$(CopyDir)\include'$(_headers_destdir)'\'$$$$F >>$(top_builddir)/build/win32/vs10/$(1).vs10.headers \
+			;; \
+		esac;	\
+	done
+
+endef
+
+$(foreach proj,$(MSVCPROJS),$(eval $(call msvcproj-builder,$(proj))))
+
+dist-hook: $(BUILT_EXTRA_DIST) $(top_builddir)/build/win32/vs9/gobject.vcproj $(top_builddir)/build/win32/vs9/gobject.headers
 	files='$(BUILT_EXTRA_DIST)'; \
 	for f in $$files; do \
 	  if test -f $$f; then d=.; else d=$(srcdir); fi; \
 	  cp $$d/$$f $(distdir) || exit 1; done
-
-../build/win32/vs9/gobject.vcproj: $(top_srcdir)/build/win32/vs9/gobject.vcprojin
-	for F in $(libgobject_2_0_la_SOURCES); do \
-		case $$F in \
-		*.c) echo '   <File RelativePath="..\..\..\gobject\'$$F'" />' \
-		     ;; \
-		esac; \
-	done >libgobject.sourcefiles
-	$(CPP) -P - <$(top_srcdir)/build/win32/vs9/gobject.vcprojin >$@
-	rm libgobject.sourcefiles
-
-../build/win32/vs10/gobject.vcxproj: $(top_srcdir)/build/win32/vs10/gobject.vcxprojin
-	for F in $(libgobject_2_0_la_SOURCES); do \
-		case $$F in \
-		*.c) echo '    <ClCompile Include="..\..\..\gobject\'$$F'" />' \
-		     ;; \
-		esac; \
-	done >libgobject.vs10.sourcefiles
-	$(CPP) -P - <$(top_srcdir)/build/win32/vs10/gobject.vcxprojin >$@
-	rm libgobject.vs10.sourcefiles
-
-../build/win32/vs10/gobject.vcxproj.filters: $(top_srcdir)/build/win32/vs10/gobject.vcxproj.filtersin
-	for F in $(libgobject_2_0_la_SOURCES); do \
-		case $$F in \
-		*.c) echo '    <ClCompile Include="..\..\..\gobject\'$$F'"><Filter>Source Files</Filter></ClCompile>' \
-		     ;; \
-		esac; \
-	done >libgobject.vs10.sourcefiles.filters
-	$(CPP) -P - <$(top_srcdir)/build/win32/vs10/gobject.vcxproj.filtersin >$@
-	rm libgobject.vs10.sourcefiles.filters
 
 install-data-local: install-ms-lib
 
