--- a/tests/gobject/Makefile.in
+++ b/tests/gobject/Makefile.in
@@ -120,6 +120,10 @@ TESTS = $(am__EXEEXT_9) $(am__EXEEXT_4)
 @ENABLE_INSTALLED_TESTS_TRUE@am__append_13 = $(test_ltlibraries) $(installed_test_ltlibraries)
 @ENABLE_INSTALLED_TESTS_TRUE@am__append_14 = $(installed_test_meta_DATA)
 @ENABLE_TIMELOOP_TRUE@am__append_15 = timeloop-closure
+@CROSS_COMPILING_FALSE@am__append_16 = testmarshal.h testmarshal.c
+@CROSS_COMPILING_FALSE@am__append_17 = stamp-testmarshal.h
+@CROSS_COMPILING_FALSE@am__append_18 = testcommon.h testmarshal.list
+@CROSS_COMPILING_FALSE@am__append_19 = testmarshal.h testmarshal.c
 subdir = tests/gobject
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4macros/attributes.m4 \
@@ -191,8 +195,8 @@ PROGRAMS = $(installed_test_PROGRAMS) $(noinst_PROGRAMS)
 am_accumulator_OBJECTS = accumulator.$(OBJEXT) testmarshal.$(OBJEXT)
 accumulator_OBJECTS = $(am_accumulator_OBJECTS)
 accumulator_LDADD = $(LDADD)
-accumulator_DEPENDENCIES = $(top_builddir)/glib/libglib-2.0.la \
-	$(top_builddir)/gobject/libgobject-2.0.la
+accumulator_DEPENDENCIES = $(top_builddir)/gobject/libgobject-2.0.la \
+	$(top_builddir)/glib/libglib-2.0.la
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
 am__v_lt_0 = --silent
@@ -200,64 +204,66 @@ am__v_lt_1 =
 am_defaultiface_OBJECTS = defaultiface.$(OBJEXT) testmodule.$(OBJEXT)
 defaultiface_OBJECTS = $(am_defaultiface_OBJECTS)
 defaultiface_LDADD = $(LDADD)
-defaultiface_DEPENDENCIES = $(top_builddir)/glib/libglib-2.0.la \
-	$(top_builddir)/gobject/libgobject-2.0.la
+defaultiface_DEPENDENCIES = $(top_builddir)/gobject/libgobject-2.0.la \
+	$(top_builddir)/glib/libglib-2.0.la
 deftype_SOURCES = deftype.c
 deftype_OBJECTS = deftype.$(OBJEXT)
 deftype_LDADD = $(LDADD)
-deftype_DEPENDENCIES = $(top_builddir)/glib/libglib-2.0.la \
-	$(top_builddir)/gobject/libgobject-2.0.la
+deftype_DEPENDENCIES = $(top_builddir)/gobject/libgobject-2.0.la \
+	$(top_builddir)/glib/libglib-2.0.la
 am_dynamictype_OBJECTS = dynamictype.$(OBJEXT) testmodule.$(OBJEXT)
 dynamictype_OBJECTS = $(am_dynamictype_OBJECTS)
 dynamictype_LDADD = $(LDADD)
-dynamictype_DEPENDENCIES = $(top_builddir)/glib/libglib-2.0.la \
-	$(top_builddir)/gobject/libgobject-2.0.la
+dynamictype_DEPENDENCIES = $(top_builddir)/gobject/libgobject-2.0.la \
+	$(top_builddir)/glib/libglib-2.0.la
 gvalue_test_SOURCES = gvalue-test.c
 gvalue_test_OBJECTS = gvalue-test.$(OBJEXT)
 gvalue_test_LDADD = $(LDADD)
-gvalue_test_DEPENDENCIES = $(top_builddir)/glib/libglib-2.0.la \
-	$(top_builddir)/gobject/libgobject-2.0.la
+gvalue_test_DEPENDENCIES = $(top_builddir)/gobject/libgobject-2.0.la \
+	$(top_builddir)/glib/libglib-2.0.la
 override_SOURCES = override.c
 override_OBJECTS = override.$(OBJEXT)
 override_LDADD = $(LDADD)
-override_DEPENDENCIES = $(top_builddir)/glib/libglib-2.0.la \
-	$(top_builddir)/gobject/libgobject-2.0.la
+override_DEPENDENCIES = $(top_builddir)/gobject/libgobject-2.0.la \
+	$(top_builddir)/glib/libglib-2.0.la
 paramspec_test_SOURCES = paramspec-test.c
 paramspec_test_OBJECTS = paramspec-test.$(OBJEXT)
 paramspec_test_LDADD = $(LDADD)
-paramspec_test_DEPENDENCIES = $(top_builddir)/glib/libglib-2.0.la \
-	$(top_builddir)/gobject/libgobject-2.0.la
+paramspec_test_DEPENDENCIES =  \
+	$(top_builddir)/gobject/libgobject-2.0.la \
+	$(top_builddir)/glib/libglib-2.0.la
 performance_SOURCES = performance.c
 performance_OBJECTS = performance.$(OBJEXT)
 performance_LDADD = $(LDADD)
-performance_DEPENDENCIES = $(top_builddir)/glib/libglib-2.0.la \
-	$(top_builddir)/gobject/libgobject-2.0.la
+performance_DEPENDENCIES = $(top_builddir)/gobject/libgobject-2.0.la \
+	$(top_builddir)/glib/libglib-2.0.la
 performance_threaded_SOURCES = performance-threaded.c
 performance_threaded_OBJECTS = performance-threaded.$(OBJEXT)
 performance_threaded_LDADD = $(LDADD)
 performance_threaded_DEPENDENCIES =  \
-	$(top_builddir)/glib/libglib-2.0.la \
-	$(top_builddir)/gobject/libgobject-2.0.la
+	$(top_builddir)/gobject/libgobject-2.0.la \
+	$(top_builddir)/glib/libglib-2.0.la
 references_SOURCES = references.c
 references_OBJECTS = references.$(OBJEXT)
 references_LDADD = $(LDADD)
-references_DEPENDENCIES = $(top_builddir)/glib/libglib-2.0.la \
-	$(top_builddir)/gobject/libgobject-2.0.la
+references_DEPENDENCIES = $(top_builddir)/gobject/libgobject-2.0.la \
+	$(top_builddir)/glib/libglib-2.0.la
 am_signals_OBJECTS = signals.$(OBJEXT)
 signals_OBJECTS = $(am_signals_OBJECTS)
 signals_LDADD = $(LDADD)
-signals_DEPENDENCIES = $(top_builddir)/glib/libglib-2.0.la \
-	$(top_builddir)/gobject/libgobject-2.0.la
+signals_DEPENDENCIES = $(top_builddir)/gobject/libgobject-2.0.la \
+	$(top_builddir)/glib/libglib-2.0.la
 singleton_SOURCES = singleton.c
 singleton_OBJECTS = singleton.$(OBJEXT)
 singleton_LDADD = $(LDADD)
-singleton_DEPENDENCIES = $(top_builddir)/glib/libglib-2.0.la \
-	$(top_builddir)/gobject/libgobject-2.0.la
+singleton_DEPENDENCIES = $(top_builddir)/gobject/libgobject-2.0.la \
+	$(top_builddir)/glib/libglib-2.0.la
 timeloop_closure_SOURCES = timeloop-closure.c
 timeloop_closure_OBJECTS = timeloop-closure.$(OBJEXT)
 timeloop_closure_LDADD = $(LDADD)
-timeloop_closure_DEPENDENCIES = $(top_builddir)/glib/libglib-2.0.la \
-	$(top_builddir)/gobject/libgobject-2.0.la
+timeloop_closure_DEPENDENCIES =  \
+	$(top_builddir)/gobject/libgobject-2.0.la \
+	$(top_builddir)/glib/libglib-2.0.la
 SCRIPTS = $(installed_test_SCRIPTS) $(noinst_SCRIPTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -506,7 +512,6 @@ TEST_LOG_DRIVER = $(SHELL) $(top_srcdir)/test-driver
 TEST_LOG_COMPILE = $(TEST_LOG_COMPILER) $(AM_TEST_LOG_FLAGS) \
 	$(TEST_LOG_FLAGS)
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ABS_GLIB_RUNTIME_LIBDIR = @ABS_GLIB_RUNTIME_LIBDIR@
 ABS_TAPSET_DIR = @ABS_TAPSET_DIR@
 ACLOCAL = @ACLOCAL@
 ALLOCA = @ALLOCA@
@@ -518,11 +523,13 @@ AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
+CARBON_LIBS = @CARBON_LIBS@
 CATALOGS = @CATALOGS@
 CATOBJEXT = @CATOBJEXT@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
+COCOA_LIBS = @COCOA_LIBS@
 CONFIG_STATUS_DEPENDENCIES = @CONFIG_STATUS_DEPENDENCIES@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
@@ -553,11 +560,8 @@ GIO = @GIO@
 GIO_MODULE_DIR = @GIO_MODULE_DIR@
 GLIBC21 = @GLIBC21@
 GLIB_BINARY_AGE = @GLIB_BINARY_AGE@
-GLIB_COMPILE_RESOURCES = @GLIB_COMPILE_RESOURCES@
-GLIB_COMPILE_SCHEMAS = @GLIB_COMPILE_SCHEMAS@
 GLIB_DEBUG_FLAGS = @GLIB_DEBUG_FLAGS@
 GLIB_EXTRA_CFLAGS = @GLIB_EXTRA_CFLAGS@
-GLIB_GENMARSHAL = @GLIB_GENMARSHAL@
 GLIB_HIDDEN_VISIBILITY_CFLAGS = @GLIB_HIDDEN_VISIBILITY_CFLAGS@
 GLIB_INTERFACE_AGE = @GLIB_INTERFACE_AGE@
 GLIB_LINK_FLAGS = @GLIB_LINK_FLAGS@
@@ -756,13 +760,13 @@ GTESTER_REPORT = $(top_builddir)/glib/gtester-report	# for the GLIB package
 NULL = 
 
 # initialize variables for unconditional += appending
-BUILT_SOURCES = testmarshal.h testmarshal.c
-BUILT_EXTRA_DIST = testmarshal.h testmarshal.c
-CLEANFILES = *.log *.trs $(am__append_14) stamp-testmarshal.h
+BUILT_SOURCES = $(am__append_16)
+BUILT_EXTRA_DIST = $(am__append_19)
+CLEANFILES = *.log *.trs $(am__append_14) $(am__append_17)
 DISTCLEANFILES = 
 MAINTAINERCLEANFILES = 
 EXTRA_DIST = $(all_dist_test_scripts) $(all_dist_test_data) \
-	testcommon.h testmarshal.list
+	$(am__append_18)
 
 # We support a fairly large range of possible variables.  It is expected that all types of files in a test suite
 # will belong in exactly one of the following variables.
@@ -841,7 +845,7 @@ all_test_ltlibs = $(test_ltlibraries) $(uninstalled_test_ltlibraries) $(installe
 @ENABLE_INSTALLED_TESTS_TRUE@                      $(dist_test_scripts) $(dist_installed_test_scripts)
 
 @ENABLE_INSTALLED_TESTS_TRUE@installed_test_meta_DATA = $(installed_testcases:=.test)
-LDADD = $(top_builddir)/glib/libglib-2.0.la $(top_builddir)/gobject/libgobject-2.0.la
+LDADD = $(top_builddir)/gobject/libgobject-2.0.la $(top_builddir)/glib/libglib-2.0.la
 AM_CPPFLAGS = $(gmodule_INCLUDES) $(GLIB_DEBUG_FLAGS)
 AM_CFLAGS = -g
 
@@ -865,8 +869,10 @@ accumulator_SOURCES = accumulator.c testmarshal.c testmarshal.h
 signals_SOURCES = signals.c
 defaultiface_SOURCES = defaultiface.c testmodule.c testmodule.h
 dynamictype_SOURCES = dynamictype.c testmodule.c testmodule.h
+
+# The marshal test requires running a binary, which means we cannot
+# build it when cross-compiling
 @CROSS_COMPILING_FALSE@glib_genmarshal = $(top_builddir)/gobject/glib-genmarshal
-@CROSS_COMPILING_TRUE@glib_genmarshal = $(GLIB_GENMARSHAL)
 all: $(BUILT_SOURCES)
 	$(MAKE) $(AM_MAKEFLAGS) all-am
 
@@ -1685,67 +1691,12 @@ uninstall-am: uninstall-installed_testLTLIBRARIES \
 	uninstall-nobase_installed_testDATA
 
 
-### testing rules
-
-# test: run all tests in cwd and subdirs
-test: test-nonrecursive
-@OS_UNIX_TRUE@	@ for subdir in $(SUBDIRS) . ; do \
-@OS_UNIX_TRUE@	    test "$$subdir" = "." -o "$$subdir" = "po" || \
-@OS_UNIX_TRUE@	    ( cd $$subdir && $(MAKE) $(AM_MAKEFLAGS) $@ ) || exit $? ; \
-@OS_UNIX_TRUE@	  done
-
 # test-nonrecursive: run tests only in cwd
 @OS_UNIX_TRUE@test-nonrecursive: ${TEST_PROGS}
 @OS_UNIX_TRUE@	@test -z "${TEST_PROGS}" || G_TEST_SRCDIR="$(abs_srcdir)" G_TEST_BUILDDIR="$(abs_builddir)" G_DEBUG=gc-friendly MALLOC_CHECK_=2 MALLOC_PERTURB_=$$(($${RANDOM:-256} % 256)) ${GTESTER} --verbose ${TEST_PROGS}
 @OS_UNIX_FALSE@test-nonrecursive:
 
-# test-report: run tests in subdirs and generate report
-# perf-report: run tests in subdirs with -m perf and generate report
-# full-report: like test-report: with -m perf and -m slow
-test-report perf-report full-report:	${TEST_PROGS}
-	@test -z "${TEST_PROGS}" || { \
-	  case $@ in \
-	  test-report) test_options="-k";; \
-	  perf-report) test_options="-k -m=perf";; \
-	  full-report) test_options="-k -m=perf -m=slow";; \
-	  esac ; \
-	  if test -z "$$GTESTER_LOGDIR" ; then	\
-	    G_TEST_SRCDIR="$(abs_srcdir)" G_TEST_BUILDDIR="$(abs_builddir)" ${GTESTER} --verbose $$test_options -o test-report.xml ${TEST_PROGS} ; \
-	  elif test -n "${TEST_PROGS}" ; then \
-	    G_TEST_SRCDIR="$(abs_srcdir)" G_TEST_BUILDDIR="$(abs_builddir)" ${GTESTER} --verbose $$test_options -o `mktemp "$$GTESTER_LOGDIR/log-XXXXXX"` ${TEST_PROGS} ; \
-	  fi ; \
-	}
-	@ ignore_logdir=true ; \
-	  if test -z "$$GTESTER_LOGDIR" ; then \
-	    GTESTER_LOGDIR=`mktemp -d "\`pwd\`/.testlogs-XXXXXX"`; export GTESTER_LOGDIR ; \
-	    ignore_logdir=false ; \
-	  fi ; \
-	  if test -d "$(top_srcdir)/.git" ; then \
-	    REVISION=`git describe` ; \
-	  else \
-	    REVISION=$(VERSION) ; \
-	  fi ; \
-	  for subdir in $(SUBDIRS) . ; do \
-	    test "$$subdir" = "." -o "$$subdir" = "po" || \
-	    ( cd $$subdir && $(MAKE) $(AM_MAKEFLAGS) $@ ) || exit $? ; \
-	  done ; \
-	  $$ignore_logdir || { \
-	    echo '<?xml version="1.0"?>'              > $@.xml ; \
-	    echo '<report-collection>'               >> $@.xml ; \
-	    echo '<info>'                            >> $@.xml ; \
-	    echo '  <package>$(PACKAGE)</package>'   >> $@.xml ; \
-	    echo '  <version>$(VERSION)</version>'   >> $@.xml ; \
-	    echo "  <revision>$$REVISION</revision>" >> $@.xml ; \
-	    echo '</info>'                           >> $@.xml ; \
-	    for lf in `ls -L "$$GTESTER_LOGDIR"/.` ; do \
-	      sed '1,1s/^<?xml\b[^>?]*?>//' <"$$GTESTER_LOGDIR"/"$$lf" >> $@.xml ; \
-	    done ; \
-	    echo >> $@.xml ; \
-	    echo '</report-collection>' >> $@.xml ; \
-	    rm -rf "$$GTESTER_LOGDIR"/ ; \
-	    ${GTESTER_REPORT} --version 2>/dev/null 1>&2 ; test "$$?" != 0 || ${GTESTER_REPORT} $@.xml >$@.html ; \
-	  }
-.PHONY: test test-report perf-report full-report test-nonrecursive
+.PHONY: test-nonrecursive
 
 .PHONY: lcov genlcov lcov-clean
 # use recursive makes in order to ignore errors during check
@@ -1757,15 +1708,16 @@ lcov:
 # placing the objects files in the .libs/ directory separate from the *.c
 # we also have to delete tests/.libs/libmoduletestplugin_*.gcda
 genlcov:
-	rm -f $(top_builddir)/tests/.libs/libmoduletestplugin_*.gcda
-	$(LTP) --directory $(top_builddir) --capture --output-file glib-lcov.info --test-name GLIB_PERF --no-checksum --compat-libtool
-	LANG=C $(LTP_GENHTML) --prefix $(top_builddir) --output-directory glib-lcov --title "GLib Code Coverage" --legend --show-details glib-lcov.info
+	$(AM_V_GEN) rm -f $(top_builddir)/tests/.libs/libmoduletestplugin_*.gcda; \
+	  $(LTP) --quiet --directory $(top_builddir) --capture --output-file glib-lcov.info --test-name GLIB_PERF --no-checksum --compat-libtool --ignore-errors source; \
+	  $(LTP) --quiet --output-file glib-lcov.info --remove glib-lcov.info docs/reference/\* /tmp/\*  gio/tests/gdbus-object-manager-example/\* ; \
+	  LANG=C $(LTP_GENHTML) --quiet --prefix $(top_builddir) --output-directory glib-lcov --title "GLib Code Coverage" --legend --frames --show-details glib-lcov.info --ignore-errors source
 	@echo "file://$(abs_top_builddir)/glib-lcov/index.html"
 
 lcov-clean:
-	-$(LTP) --directory $(top_builddir) -z
-	-rm -rf glib-lcov.info glib-lcov
-	-find -name '*.gcda' -print | xargs rm
+	if test -n "$(LTP)"; then \
+	  $(LTP) --quiet --directory $(top_builddir) -z; \
+	fi
 
 # run tests in cwd as part of make check
 check-local: test-nonrecursive
@@ -1773,20 +1725,20 @@ check-local: test-nonrecursive
 @ENABLE_INSTALLED_TESTS_TRUE@%.test: %$(EXEEXT) Makefile
 @ENABLE_INSTALLED_TESTS_TRUE@	$(AM_V_GEN) (echo '[Test]' > $@.tmp; \
 @ENABLE_INSTALLED_TESTS_TRUE@	echo 'Type=session' >> $@.tmp; \
-@ENABLE_INSTALLED_TESTS_TRUE@	echo 'Exec=$(installed_testdir)/$<' >> $@.tmp; \
+@ENABLE_INSTALLED_TESTS_TRUE@	echo 'Exec=$(installed_testdir)/$(notdir $<)' >> $@.tmp; \
 @ENABLE_INSTALLED_TESTS_TRUE@	mv $@.tmp $@)
 
-testmarshal.h: stamp-testmarshal.h
-	@true
-stamp-testmarshal.h: @REBUILD@ testmarshal.list $(glib_genmarshal)
-	$(AM_V_GEN) $(glib_genmarshal) --prefix=test_marshal $(srcdir)/testmarshal.list --header >> xgen-gmh \
-	&& (cmp -s xgen-gmh testmarshal.h 2>/dev/null || cp xgen-gmh testmarshal.h) \
-	&& rm -f xgen-gmh xgen-gmh~ \
-	&& echo timestamp > $@
-testmarshal.c: @REBUILD@ testmarshal.h testmarshal.list $(glib_genmarshal)
-	$(AM_V_GEN) (echo "#include \"testmarshal.h\""; $(glib_genmarshal) --prefix=test_marshal $(srcdir)/testmarshal.list --body) >> xgen-gmc \
-	&& cp xgen-gmc testmarshal.c \
-	&& rm -f xgen-gmc xgen-gmc~
+@CROSS_COMPILING_FALSE@testmarshal.h: stamp-testmarshal.h
+@CROSS_COMPILING_FALSE@	@true
+@CROSS_COMPILING_FALSE@stamp-testmarshal.h: @REBUILD@ testmarshal.list $(glib_genmarshal)
+@CROSS_COMPILING_FALSE@	$(AM_V_GEN) $(glib_genmarshal) --prefix=test_marshal $(srcdir)/testmarshal.list --header >> xgen-gmh \
+@CROSS_COMPILING_FALSE@	&& (cmp -s xgen-gmh testmarshal.h 2>/dev/null || cp xgen-gmh testmarshal.h) \
+@CROSS_COMPILING_FALSE@	&& rm -f xgen-gmh xgen-gmh~ \
+@CROSS_COMPILING_FALSE@	&& echo timestamp > $@
+@CROSS_COMPILING_FALSE@testmarshal.c: @REBUILD@ testmarshal.h testmarshal.list $(glib_genmarshal)
+@CROSS_COMPILING_FALSE@	$(AM_V_GEN) (echo "#include \"testmarshal.h\""; $(glib_genmarshal) --prefix=test_marshal $(srcdir)/testmarshal.list --body) >> xgen-gmc \
+@CROSS_COMPILING_FALSE@	&& cp xgen-gmc testmarshal.c \
+@CROSS_COMPILING_FALSE@	&& rm -f xgen-gmc xgen-gmc~
 
 dist-hook: $(BUILT_EXTRA_DIST)
 	files='$(BUILT_EXTRA_DIST)';				\
